Fix image alignment on mobile view for TwoParagraphBlock component (#101)
* Fix image alignment in mobile view

* Undo .gridAreaImage text-align property to allow image to bleed into right margin

* Remove position property

--- a/src/components/grid-aware/TwoParagraphBlock/TwoParagraphBlock.module.css
+++ b/src/components/grid-aware/TwoParagraphBlock/TwoParagraphBlock.module.css
@@ -82,6 +82,7 @@
   }
 
   .gridAreaImage {
+    margin-right: -40px;
     margin-top: 40px;
     text-align: right;
   }
@@ -123,9 +124,7 @@
   }
 
   .image1Wrapper {
-    left: 40px;
     margin-bottom: 0;
-    position: relative;
   }
 }
 
